--- a/source/form.html
+++ b/source/form.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>form</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.min.css" />
     <link rel="icon" href="favicon.ico" />
     <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="img/favicons/apple-favicon.png" />
@@ -16,7 +16,7 @@
       <div class="container">
         <nav class="header__nav header__nav--no-js">
           <div class="header__logo-wrapper">
-            <a class="header__logo" href="#">
+            <a class="header__logo" href="index.html">
               <picture>
                 <source
                   media="(min-width: 1150px)"
@@ -66,6 +66,7 @@
                     focusable="false"
                     width="18"
                     height="18"
+                    opacity="0.2"
                     viewBox="0 0 18 18"
                     fill="$color-default-black"
                     xmlns="http://www.w3.org/2000/svg"
@@ -120,19 +121,37 @@
       </section>
       <section class="form">
         <h2 class="visually-hidden">Форма оформления заказа.</h2>
-        <p class="form__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
-        <form class="form__wrapper" action="https://echo.htmlacademy.ru/" method="post">
+        <p class="form__description">
+          Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую
+          форму заказа и мы свяжемся с вами, чтобы уточнить детали.
+        </p>
+        <form
+          class="form__wrapper"
+          action="https://echo.htmlacademy.ru/"
+          method="post"
+        >
           <div class="form__group form__group--radio">
             <h3 class="form__legend">
               <span class="form__legend-text">Тип</span>
             </h3>
             <label class="form__label">
-              <input class="form__input-radio visually-hidden" type="radio" name="type" value="accessory-interior" checked>
+              <input
+                class="form__input-radio visually-hidden"
+                type="radio"
+                name="type"
+                value="accessory-interior"
+                checked
+              />
               <span class="form__dot"></span>
               <span class="form__text">Аксессуар для интерьера</span>
             </label>
             <label class="form__label">
-              <input class="form__input-radio visually-hidden" type="radio" name="type" value="kid-toy">
+              <input
+                class="form__input-radio visually-hidden"
+                type="radio"
+                name="type"
+                value="kid-toy"
+              />
               <span class="form__dot"></span>
               <span class="form__text">Детская игрушка</span>
             </label>
@@ -144,32 +163,64 @@
               </h3>
               <div class="form__grid-label">
                 <label class="form__label">
-                  <input class="form__input-checkbox visually-hidden" type="checkbox" name="color" value="white" checked>
+                  <input
+                    class="form__input-checkbox visually-hidden"
+                    type="checkbox"
+                    name="color"
+                    value="white"
+                    checked
+                  />
                   <span class="form__check"></span>
                   <span class="form__text">Белый</span>
                 </label>
                 <label class="form__label">
-                  <input class="form__input-checkbox visually-hidden" type="checkbox" name="color" value="gray" checked>
+                  <input
+                    class="form__input-checkbox visually-hidden"
+                    type="checkbox"
+                    name="color"
+                    value="gray"
+                    checked
+                  />
                   <span class="form__check"></span>
                   <span class="form__text">Серый</span>
                 </label>
                 <label class="form__label">
-                  <input class="form__input-checkbox visually-hidden" type="checkbox" name="color" value="tiffani">
+                  <input
+                    class="form__input-checkbox visually-hidden"
+                    type="checkbox"
+                    name="color"
+                    value="tiffani"
+                  />
                   <span class="form__check"></span>
                   <span class="form__text">Тиффани</span>
                 </label>
                 <label class="form__label">
-                  <input class="form__input-checkbox visually-hidden" type="checkbox" name="color" value="black">
+                  <input
+                    class="form__input-checkbox visually-hidden"
+                    type="checkbox"
+                    name="color"
+                    value="black"
+                  />
                   <span class="form__check"></span>
                   <span class="form__text">Черный</span>
                 </label>
                 <label class="form__label">
-                  <input class="form__input-checkbox visually-hidden" type="checkbox" name="color" value="pink">
+                  <input
+                    class="form__input-checkbox visually-hidden"
+                    type="checkbox"
+                    name="color"
+                    value="pink"
+                  />
                   <span class="form__check"></span>
                   <span class="form__text">Розовый</span>
                 </label>
                 <label class="form__label">
-                  <input class="form__input-checkbox visually-hidden" type="checkbox" name="color" value="orange">
+                  <input
+                    class="form__input-checkbox visually-hidden"
+                    type="checkbox"
+                    name="color"
+                    value="orange"
+                  />
                   <span class="form__check"></span>
                   <span class="form__text">Оранжевый</span>
                 </label>
@@ -182,15 +233,32 @@
             </h3>
             <label class="form__label">
               <span class="form__text">Имя:</span>
-              <input class="form__input-text" type="text" name="name" placeholder="Введите ваше имя*" required>
+              <input
+                class="form__input-text"
+                type="text"
+                name="name"
+                placeholder="Введите ваше имя*"
+                required
+              />
             </label>
             <label class="form__label">
               <span class="form__text">Фамилия:</span>
-              <input class="form__input-text" type="text" name="surname" placeholder="Укажите фамилию*" required>
+              <input
+                class="form__input-text"
+                type="text"
+                name="surname"
+                placeholder="Укажите фамилию*"
+                required
+              />
             </label>
             <label class="form__label">
               <span class="form__text">Отчество:</span>
-              <input class="form__input-text" type="text" name="patronymic" placeholder="Отчество, если желаете">
+              <input
+                class="form__input-text"
+                type="text"
+                name="patronymic"
+                placeholder="Отчество, если желаете"
+              />
             </label>
           </div>
           <div class="form__inner">
@@ -200,9 +268,15 @@
               </h3>
               <label class="form__label">
                 <span class="visually-hidden">Укажите номер телефона.</span>
-                <input class="form__input-text" type="tel" name="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*" required>
+                <input
+                  class="form__input-text"
+                  type="tel"
+                  name="phone"
+                  placeholder="+7 ХХХ ХХХ ХХ ХХ*"
+                  required
+                />
                 <svg class="form__svg" width="25" height="24" role="img">
-                  <use xlink:href="img/svg/sprite.svg#icon-phone" />
+                  <use xlink:href="./img/sprite/sprite.svg#phone-icon" />
                 </svg>
               </label>
             </div>
@@ -212,9 +286,15 @@
               </h3>
               <label class="form__label">
                 <span class="visually-hidden">Укажите электронную почту.</span>
-                <input class="form__input-text" type="email" name="email" placeholder="Ваш Email*" required>
+                <input
+                  class="form__input-text"
+                  type="email"
+                  name="email"
+                  placeholder="Ваш Email*"
+                  required
+                />
                 <svg class="form__svg" width="32" height="21" role="img">
-                  <use xlink:href="img/svg/sprite.svg#icon-email" />
+                  <use xlink:href="./img/sprite/sprite.svg#email-icon" />
                 </svg>
               </label>
             </div>
@@ -223,11 +303,19 @@
             <h3 class="form__legend">
               <span class="form__legend-text">ДОП</span>
             </h3>
-            <textarea class="form__textarea" name="wishes" rows="6" placeholder="Опишите все ваши пожелания к заказу" aria-label="Опишите все ваши пожелания к заказу."></textarea>
+            <textarea
+              class="form__textarea"
+              name="wishes"
+              rows="6"
+              placeholder="Опишите все ваши пожелания к заказу"
+              aria-label="Опишите все ваши пожелания к заказу."
+            ></textarea>
           </div>
           <div class="form__submit-wrapper">
             <p class="form__required">*Поля обязательны для заполнения</p>
-            <button class="form__button button button--primary" type="submit">Отправить заказ</button>
+            <button class="form__button button button--primary" type="submit">
+              Отправить заказ
+            </button>
           </div>
         </form>
       </section>
@@ -243,9 +331,7 @@
               fill="$color-default-black"
               xmlns="http://www.w3.org/2000/svg"
             >
-              <path
-                d="M19.22 21.38c-.1-2.68-.5-5.27-.5-7.95 0-2.2.4-4.38-.4-6.47 0-.2.1-.5.1-.7.2-.99-3.3-.5-3.8.5-.3.3-.5.6-.4 1 0 .1.1.2.1.3-.7 3.18-1.6 6.26-2.6 9.34-.4 1.2-.9 2.3-1.3 3.48-.6-1.09-1.2-2.18-1.6-3.38-1.4-3.38-2.6-6.86-4.3-10.14.2-1.5-3.2-1.4-3.9 0-.8 1.69-.7 3.38-.4 5.17.3 1.99.4 3.98.4 6.07 0 3.97.4 7.85.4 11.83-.4.4-.5.9-.1 1.4.2.2.4.4.6.5 1 .69 3.6.09 3.6-1.3 0-4.08-.3-8.16-.4-12.33v-1.2c.1.1.1.3.2.4.6 1.6 1.3 3.18 2.2 4.67.9 1.5 1.3 3.09 1.8 4.68-.2.2-.3.5-.2.7 0 .2.1.3.3.4.6.49 1.8.3 2.5 0 .3-.1.6-.3.8-.4.3-.2.9-.7.7-1.2 0-.1-.1-.2-.1-.3.5-1.29.7-2.58 1-3.88.3-1.39.8-2.78 1.3-4.07.1.6.1 1.2.2 1.89.2 2.58 0 5.07 0 7.55 0 .8.1 1.6.2 2.5.1.29.4 1.78.3 1.88-.8.5-.6 1.1.2 1.3.9.2 2.1-.1 2.8-.7 1.2-1.1.6-2.79.4-4.18-.5-2.39 0-4.97-.1-7.36zM27.62 22.08c-.1-2-.8-3.88-.8-5.87 0-2.29.2-4.57-.2-6.86-.1-.7-4.1.1-3.9 1 .3 2.08.2 4.17.2 6.36 0 1.99.5 3.88.7 5.86.3 2.1-.1 4.18.1 6.17.1 1 .8 2.69.1 3.58-.4.5 1.5.3 1.6.3.8-.1 1.8-.4 2.3-1 .7-.8.2-2.38.1-3.38-.3-1.99-.1-4.17-.2-6.16zM43.92 18.8c-2.1-2.79-5.9-.8-8.6-1.5-1.4-.4-1.4-2.28-1.4-3.38 0-1.39-.1-2.68-.3-4.07-.1-1.1 0-2.1.7-2.89.1-.1.9-.3.8-.3.4-.1.7-.1 1.1-.1 1.5-.1 4.6.2 4 2.49-.3 1 3.6.4 3.9-.6 1.2-4.57-7.3-3.68-9.7-3.08-2.2.6-4.6 1.79-4.8 4.38-.1 1.19.3 2.38.3 3.58.1 1.39-.2 2.78.3 4.07 1.1 2.99 5.5 1.6 7.8 1.7 3.8.3 2.7 5.46 2.7 7.85 0 1.3 1.2 3.38.2 4.48-.6.7-2 .7-2.8.8-.8.1-2.2.29-2.7-.5-1-1.4.1-3.79-.1-5.38-.1-.9-4.1-.1-3.9 1 .3 2.58-1.4 6.06 2.4 6.56 2.4.3 5.2-.2 7.5-.9 1.2-.4 2.3-.89 3.2-1.78 1-.9.7-2.3.4-3.48-.5-3.09.9-6.47-1-8.95zM61.32 18.6c-.1-3.78-.7-7.46-.7-11.24 0-1.99-4-1.3-4 .3 0 3.58.5 7.16.7 10.74v.2c-1.9 0-3.9.2-5.9.2.2-4.58-.6-9.15-.4-13.83 0-.6-3.9-.1-3.9 1-.2 4.47.6 8.85.5 13.32l-.3 6.37c0 1.1.2 2.19.3 3.28.1 1 .5 2.29.2 3.28-.2.8 3.6.3 3.9-.7.5-1.79-.2-3.97-.4-5.76-.2-1.7 0-3.48.1-5.17 2-.1 4.1-.3 6.1 0l.3 4.07c.1 1.2.2 2.29.2 3.48 0 1 .1 2.49-.2 3.48-.8 2.1 3.1 1.9 3.7.4.7-1.89.5-4.17.4-6.16-.2-2.49-.6-4.88-.6-7.26zM78.22 22.97c-.9-2.78-2.4-5.17-3.6-7.75 1-1.9 2-3.88 2.9-5.87.8-1.8 1.4-3.78 3.1-5.07.6-.4.6-.9-.3-1-.9-.1-2.1.2-2.8.7-1.4 1.3-2.4 2.68-3.1 4.37-.9 2.1-1.9 4.08-2.9 6.07-.1.1-.1.3-.2.4-.5.3-.8.8-.6 1.3a66.9 66.9 0 0 1-2.5 4.57c-.3-5.47-1-11.04-1.2-16.51 0-1.3-4-.5-3.9 1 .2 6.85 1.2 13.62 1.3 20.48v.1c-.3.3-.2.5.1.6 0 1.78-.1 3.47-.2 5.26-.5.7.5 1.1 1.1 1.1h.1c.7 0 2.6-.3 2.7-1.4.2-2.08.3-4.17.2-6.26 1.6-1.69 2.9-3.58 4.1-5.57.8 1.5 1.5 2.99 2 4.58.9 2.68 2.3 5.27 3.1 7.95.5 1.8 4.5.7 3.9-1-1-2.78-2.4-5.26-3.3-8.05zM101.72 18.4c-.2-.8-1.4-.8-2.3-.8v-1c-.1-2.68-.2-5.36-.4-7.95-.2-2.48-1.6-3.28-4-3.18-2.4.1-5.2.5-7.5 1.4-2.6.99-4.1 2.88-4.6 5.66-.5 2.98.2 6.17.4 9.15.2 3.48.1 6.96.1 10.44 0 .6 3.9 0 3.9-1v-8.25c0-.8-.1-1.59-.1-2.38 1.4-.6 3.7 0 5.1.1 1.1.1 2.2-.2 3.2-.3 0 2.29.1 4.57.2 6.86 0 1.2.5 3.48-.4 4.47-.4.5 1.5.3 1.6.3.8-.1 1.8-.4 2.3-1 .9-1.09.5-3.77.4-5.06-.1-1.9-.1-3.78-.1-5.67 1.1-.2 2.4-.9 2.2-1.8zm-14.6-.1l-.3-3.68c-.2-2.29.1-5.57 2.3-6.96.6-.4 1.7-.3 2.4-.4 1-.2 2-.4 2.8.2 1.2.8.9 3.68.9 4.87 0 2 .2 3.98.3 5.97-.6.1-1.1.1-1.7.1-2.3-.2-4.6-.6-6.7-.1zM24.22 6.66c.5-.1 1-.2 1.5-.5l.2-.2c.5-.3 1-.79.7-1.39-.5-1.09-.4-2.18-.4-3.38 0-1-1-1.19-1.8-1.19-.7.1-2.2.6-2.2 1.5 0 .99-.1 1.98.1 2.98 0 .1-.1.2-.1.4-.1.2 0 .4.1.59v.4c.1.2.2.4.4.5.6.3 1.1.3 1.5.3z"
-              />
+            <use href="./img/sprite/sprite.svg#logo-footer" />
             </svg>
             <span class="visually-hidden">Логотип сайта 'Мишка'.</span>
           </a>
@@ -261,9 +347,7 @@
                   fill="#231F20"
                   xmlns="http://www.w3.org/2000/svg"
                 >
-                  <path
-                    d="M0 2.84c0-.86.52-1.32 1.55-1.38l3.97.02c.26 0 .44.13.53.38.4 1.26.86 2.34 1.37 3.25.5.92 1.17 1.97 1.99 3.16.07.15.18.23.34.23.13 0 .22-.06.3-.18l.07-.28.03-4.35c0-.3-.07-.5-.23-.6-.15-.1-.43-.18-.83-.23-.32-.05-.48-.23-.48-.55 0-.07 0-.12.02-.15.38-1.09 1.44-1.63 3.2-1.63l1.5-.03c.67 0 1.23.16 1.67.48.44.32.67.82.67 1.5V8.2c.12.08.24.12.34.12.27 0 .5-.15.7-.45 1.95-2.58 3-4.31 3.17-5.18 0-.02.01-.06.05-.13.12-.25.33-.47.61-.65.29-.19.53-.31.75-.38a.55.55 0 0 1 .24-.05h4.13l.26.03c.36 0 .63.16.83.47.07.1.12.21.15.33a2.4 2.4 0 0 1 .06.55v.18a6.11 6.11 0 0 1-.94 2.2c-.5.78-1.15 1.62-1.93 2.53-.79.9-1.27 1.5-1.47 1.78-.16.2-.24.39-.24.56 0 .13.07.28.21.45l3.9 4.63c.2.26.31.56.31.88 0 .38-.16.7-.48.95-.32.25-.7.4-1.14.43l-.46.02h-4.04c-.02 0-.06 0-.11.02a.86.86 0 0 1-.1.01c-.4 0-.76-.16-1.1-.48-.12-.13-.96-1.12-2.5-2.97a1.39 1.39 0 0 0-.38-.32 38.47 38.47 0 0 0-.53 2.24l-.08.42a1.4 1.4 0 0 1-1.12 1.06l-.37.02h-2.61c-1.48 0-2.95-.63-4.41-1.9a19.3 19.3 0 0 1-3.96-4.95A47.51 47.51 0 0 1 .13 3.57 1.92 1.92 0 0 1 0 2.84Zm16.01 6.51c-.37 0-.7-.1-1.01-.29a.9.9 0 0 1-.45-.79V2.5c0-.34-.1-.58-.27-.72-.18-.14-.49-.21-.93-.21l-1.52.05c-.76 0-1.34.12-1.73.37.78.36 1.17.93 1.17 1.71v4.43a1.5 1.5 0 0 1-.53 1.04c-.32.28-.68.42-1.07.42-.53 0-.94-.24-1.22-.73a26.16 26.16 0 0 1-3.1-5.63l-.23-.66-3.55-.02c-.23 0-.36.01-.38.03-.03.03-.04.1-.04.22 0 .15.01.3.05.48l.56 1.4c1.49 3.64 3.11 6.51 4.86 8.6 1.75 2.1 3.47 3.15 5.16 3.15h2.66c.1 0 .19-.03.24-.09.05-.06.1-.17.13-.34l.06-.25.5-2.21c.15-.3.27-.5.38-.6.2-.2.42-.28.69-.28.43 0 .86.24 1.3.73l2.27 2.71c.14.22.3.33.45.33h4.4c.53 0 .8-.13.8-.38a.47.47 0 0 0-.08-.25l-3.87-4.55c-.3-.35-.45-.73-.45-1.13 0-.4.14-.8.43-1.16.23-.34.68-.9 1.34-1.67.67-.78 1.25-1.51 1.75-2.19.5-.68.82-1.3.98-1.85l.08-.33a.37.37 0 0 1-.02-.16c0-.07-.01-.14-.03-.19h-4.18c-.27.1-.48.25-.64.45l-.16.48c-.45 1.16-1.6 2.94-3.5 5.36-.36.33-.8.5-1.3.5Z"
-                  />
+                <use href="./img/sprite/sprite.svg#social-vk" />
                 </svg>
                 <span class="visually-hidden">Мы во Вконтакте.</span>
               </a>
@@ -279,9 +363,7 @@
                   fill="#231F20"
                   xmlns="http://www.w3.org/2000/svg"
                 >
-                  <path
-                    d="m15.85 9.3-5.24-3.5a.65.65 0 0 0-1.01.55v6.98a.65.65 0 0 0 1.01.54l5.24-3.49a.65.65 0 0 0 0-1.09Zm-4.94 2.8V7.58l3.4 2.27-3.4 2.27Zm12.48-8.56a2.4 2.4 0 0 0-1.45-1.63C18.22.48 12.25.5 12 .5S5.78.48 2.06 1.9A2.4 2.4 0 0 0 .61 3.55 25.32 25.32 0 0 0 0 9.84c0 3.26.33 5.22.61 6.3a2.4 2.4 0 0 0 1.45 1.63c3.72 1.43 9.69 1.4 9.94 1.4h.08c.75 0 6.31-.04 9.86-1.4a2.4 2.4 0 0 0 1.45-1.64c.28-1.07.61-3.03.61-6.3 0-3.25-.33-5.22-.61-6.29Zm-1.27 12.27a1.1 1.1 0 0 1-.65.74c-3.5 1.34-9.4 1.32-9.47 1.32-.07 0-5.98.02-9.47-1.32a1.09 1.09 0 0 1-.65-.74c-.27-1-.57-2.85-.57-5.97 0-3.12.3-4.97.57-5.97a1.1 1.1 0 0 1 .65-.74C6.03 1.79 11.93 1.8 12 1.8c.07 0 5.98-.02 9.47 1.32a1.1 1.1 0 0 1 .65.74c.27 1 .57 2.85.57 5.97 0 3.12-.3 4.96-.57 5.97Z"
-                  />
+                <use href="./img/sprite/sprite.svg#social-youtube" />
                 </svg>
                 <span class="visually-hidden">Мы на Youtube.</span>
               </a>
@@ -297,11 +379,7 @@
                   fill="#231F20"
                   xmlns="http://www.w3.org/2000/svg"
                 >
-                  <path
-                    fill-rule="evenodd"
-                    clip-rule="evenodd"
-                    d="M19.46.65c.18.15.27.38.23.61l-2.63 15.76a.66.66 0 0 1-1.01.44l-7.88-5.25a.66.66 0 0 1-.15-.96L10.63 8l-4.36 2.9a.66.66 0 0 1-.65.05L.36 8.3a.66.66 0 0 1 .08-1.2L18.82.53a.66.66 0 0 1 .64.11ZM2.33 7.82 5.86 9.6l7.56-5.04a.66.66 0 0 1 .88.96l-4.8 6 6.43 4.3 2.28-13.66L2.33 7.82Z"
-                  />
+                <use href="./img/sprite/sprite.svg#social-telegram" />
                 </svg>
                 <span class="visually-hidden">Мы в Telegram.</span>
               </a>
@@ -321,9 +399,7 @@
               fill="#63D1BB"
               xmlns="http://www.w3.org/2000/svg"
             >
-              <path
-                d="M13.6 0h-.1L0 1.4v24.7l13.5 8 13.4-8V1.4L13.6 0ZM25 12.1 13.5 5.3v-.1h-.1l-.1-.1v.1L1.9 12.1v-9l11.5-1.2L25 3.1v9ZM13.4 6.8l11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1L2 13.6l11.4-6.8ZM1.9 15.1l11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9L1.9 25v-9.9Z"
-              />
+            <use href="./img/sprite/sprite.svg#htmlacademy" />
             </svg>
             <span class="visually-hidden"
               >Лендинг интенсива "HTML и CSS. Адаптивная вёрстка и
