--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML Academy: Мишка</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.min.css" />
     <link rel="icon" href="favicon.ico" />
     <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="img/favicons/apple-favicon.png" />
@@ -66,9 +66,11 @@
                     focusable="false"
                     width="18"
                     height="18"
+                    opacity="0.2"
                     viewBox="0 0 18 18"
                     fill="$color-default-black"
                     xmlns="http://www.w3.org/2000/svg"
+                    op
                   >
                     <use href="./img/sprite/sprite.svg#search" />
                   </svg>
@@ -222,11 +224,13 @@
               </picture>
             </div>
 
-          <div class="stock__order-wrapper">
-            <span class="stock__price">Цена: 990 руб.</span>
-            <a class="stock__button button modal__button" href="#">Заказать</a>
+            <div class="stock__order-wrapper">
+              <span class="stock__price">Цена: 990 руб.</span>
+              <a class="stock__button button modal__button" href="#"
+                >Заказать</a
+              >
+            </div>
           </div>
-        </div>
         </div>
       </section>
       <section class="features">
@@ -261,7 +265,7 @@
             <h2 class="reviews__title">Отзывы</h2>
             <p class="reviews__text">
               Я молодая мама, но всё равно фотографии не набирали и близко
-              такого количества лайков, как <br />
+              такого количества лайков, как  <br />
               у популярных инстамамочек. <br />
               В отчаянии, я накупила аксессуаров и игрушек в Мишке, <br />
               и мои фотографии сразу стали более стильными, а также набирают
@@ -365,7 +369,7 @@
               fill="$color-default-black"
               xmlns="http://www.w3.org/2000/svg"
             >
-              <use href="./img/sprite/sprite.svg#footer-logo" />
+            <use href="./img/sprite/sprite.svg#logo-footer" />
             </svg>
             <span class="visually-hidden">Логотип сайта 'Мишка'.</span>
           </a>
@@ -378,10 +382,10 @@
                   width="27"
                   height="18"
                   viewBox="0 0 27 18"
-                  fill="#$color-aubergine"
+                  fill="#231F20"
                   xmlns="http://www.w3.org/2000/svg"
                 >
-                  <use href="./img/sprite/sprite.svg#vkontakte-icon" />
+                <use href="./img/sprite/sprite.svg#social-vk" />
                 </svg>
                 <span class="visually-hidden">Мы во Вконтакте.</span>
               </a>
@@ -394,10 +398,10 @@
                   width="24"
                   height="20"
                   viewBox="0 0 24 20"
-                  fill="$color-aubergine"
+                  fill="#231F20"
                   xmlns="http://www.w3.org/2000/svg"
                 >
-                  <use href="./img/sprite/sprite.svg#youtube-icon" />
+                <use href="./img/sprite/sprite.svg#social-youtube" />
                 </svg>
                 <span class="visually-hidden">Мы на Youtube.</span>
               </a>
@@ -410,10 +414,10 @@
                   width="20"
                   height="18"
                   viewBox="0 0 20 18"
-                  fill="$color-aubergine"
+                  fill="#231F20"
                   xmlns="http://www.w3.org/2000/svg"
                 >
-                  <use href="./img/sprite/sprite.svg#telegram-icon" />
+                <use href="./img/sprite/sprite.svg#social-telegram" />
                 </svg>
                 <span class="visually-hidden">Мы в Telegram.</span>
               </a>
@@ -425,16 +429,15 @@
           >
             Разработано
             <svg
-              class="footer__logo-htmlacademy"
               aria-hidden="true"
               focusable="false"
               width="27"
               height="35"
               viewBox="0 0 27 35"
-              fill="$color-downy"
+              fill="#63D1BB"
               xmlns="http://www.w3.org/2000/svg"
             >
-              <use href="./img/sprite/sprite.svg#logo-htmlacademy" />
+            <use href="./img/sprite/sprite.svg#htmlacademy" />
             </svg>
             <span class="visually-hidden"
               >Лендинг интенсива "HTML и CSS. Адаптивная вёрстка и
@@ -505,7 +508,7 @@
         </form>
       </div>
     </div>
-    <script src="js/navigation-mobile.js"></script>
-    <script src="js/modal-window.js"></script>
+    <script src="js/navigation-mobile.min.js"></script>
+    <script src="js/modal-window.min.js"></script>
   </body>
 </html>
